# hestia_code_assistant

./: .gitignore  AGENTS.md  CSK_NEXT_Phase_Spec_RU.md  CSK_NEXT_Remediation_Plan_MVP_2026-02-26.md  README.md  README_CSKM_PRO.md  csk  pf  pyproject.toml
.codex/: config.toml
.csk-app/: digest.md  registry.json
.pf/: state.db
csk_next_mvp_docs/: 01_PRODUCT_NORTH_STAR.md  02_ARCHITECTURE.md  04_ARTIFACTS_AND_SCHEMAS.md  08_GATES_SPEC.md  14_GLOSSARY.md
docs/: APPROVAL_TOKEN_POLICY.md  AUTOMATIONS_PRESETS.md  AUTOMATION_SAFETY.md  CODEX_SETUP.md  CONTRACT.md  CONTRACTS.md  FILE_LAYOUT.md  IMPLEMENTATION_GUIDE.md  LOCAL_ENVIRONMENTS_PRESETS.md  MANAGER_REPORT_2026-02-26.md  NEW_PROJECT_ONBOARDING.md  NEW_PROJECT_QUICKSTART_RU.md  PROJECT_FULL_DESCRIPTION_RU.md  RESEARCH_TRACEABILITY.md  VALIDATION.md  WORKTREE_HYGIENE.md  csk-migration-playbook.md  csk-update-changelog.md  csk-upstream-update.md  error_catalog.md  git_boundary.md  ops_runbook.md  plan_of_record.md  rc_baseline_2026-02-25.md  remediation_backlog.md  retro-evolution.md  self_host_workflow.md  target_spec_delta_v0.1.1.md  traceability_matrix.md
examples/: INSTALL_COMPLETION.md
pfpkg/: __init__.py  artifacts.py  cli.py  context_builder.py  db.py  docs_freshness.py  doctor.py  errors.py  events.py  focus.py  ids.py  init_cmd.py  missions.py  modules.py  output.py  paths.py  pkm.py  plans.py  projections.py  replay.py  report.py  status.py  tasks.py  templates_store.py  util_fs.py  util_git.py  util_hash.py  util_json.py  util_time.py  validation.py  worktrees.py
schemas/: backlog_entry.schema.json  (+19 more)
(+334 files in other folders)
